<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroud">


    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv2"
        android:layout_centerInParent="true"
        android:text="@string/attention_tv1"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/iv_attention"
        android:layout_centerHorizontal="true"
        android:text="@string/attention_tv2"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/iv_attention"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="100dp"
        android:layout_marginTop="100dp"
        android:src="@mipmap/follow_prompt_login_icon" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_attention"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/friend_un_login_btn_press"
            android:text="@string/login_btn"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_regest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:background="@mipmap/friend_un_login_btn_normal"
            android:text="@string/regist_btn"
            android:textColor="@color/red" />
    </LinearLayout>


</RelativeLayout>