<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="blocksDescendants"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:paddingTop="10dp">

    <ImageView
        android:id="@+id/iv_sub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="10dp"
        android:scaleType="fitXY"
        android:src="@mipmap/label_default_icon" />

    <TextView
        android:id="@+id/tv1_sub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tv2_sub"
        android:layout_alignLeft="@+id/tv2_sub"
        android:layout_marginBottom="10dp"
        android:layout_toRightOf="@+id/iv_sub"
        android:text="@string/sub_btn"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv2_sub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/iv_sub"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@+id/iv_sub"
        android:text="@string/regist_btn" />


    <TextView
        android:id="@+id/tv3_sub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tv2_sub"
        android:layout_toRightOf="@+id/tv2_sub"
        android:text="@string/subtext1" />

    <TextView
        android:id="@+id/tv4_sub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tv2_sub"
        android:layout_toRightOf="@+id/tv3_sub"
        android:text="@string/sub_btn"
        android:textColor="@color/red" />

    <Button
        android:id="@+id/btn_sub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:background="@mipmap/main_btn_bg_normal"
        android:focusable="false"
        android:text="@string/sub_btn"
        android:textColor="@color/red" />

</RelativeLayout>